# serial-durbugger

./: README.md  index.html  latest.json  package-lock.json  package.json
.github/workflows/: build.yaml  check.yaml
src/: alert.tsx  device.tsx  err.ts  global.css  main.tsx  session_manager.tsx  update.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: any.rs  config.rs  drive.rs  err.rs  lib.rs  main.rs  settings.rs  update.rs
src-tauri/src/command/: mod.rs  route.rs
src-tauri/src/device/: mock.rs  mod.rs  serial.rs
src-tauri/src/project/: drive.rs  mod.rs
src-tauri/src/workspace/: mod.rs
src/component/: autocomplete.tsx  button.tsx  control_bar.tsx  dropdown.tsx  find.tsx  input.tsx  kebab_input.tsx  panel_section.tsx
src/component/session/: configure_card.tsx
src/page/: configure_project.tsx  panel_configuration.tsx  workspace_old.tsx
src/page/home/: home.tsx  new.tsx  recent_workspaces.tsx  settings.tsx
src/page/workspace/: configuration.tsx  const.tsx  drag.ts  header.tsx  page.tsx  resize.ts  resize.tsx  types.ts  utils.ts
src/widget/: command_panel.tsx  log.tsx  raw.tsx  tool.ts  widget.ts
src/widget/log/: common.ts  log_viewer.tsx
src/widget/readout/: common.tsx  readout.tsx  readout_timeline.tsx
